--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <body>
         <c><img src="https://i.postimg.cc/CLF51tCt/image.png"></c><br>
         <h1>Welcome to Haley MacAuley's Programming Portfolio</h1>
-        <img src="https://i.postimg.cc/PfLsMMXx/image.png"> <img src="https://i.postimg.cc/FsgPbfLz/image.png"> <img src="https://i.postimg.cc/wjMht35S/image.png">
+        <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/PfLsMMXx/image.png"></a> <a href="https://haleymacauley.github.io/javascript.html"><img src="https://i.postimg.cc/FsgPbfLz/image.png"> </a> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/wjMht35S/image.png"> </a>
         <p>My name is Haley MacAuley. <br> I was born and raised in Barre, Vermont.
             <img href="">
     </body>
