--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <c><img src="https://i.postimg.cc/CLF51tCt/image.png"></c><br>
         <h1>Welcome to Haley MacAuley's Programming Portfolio</h1>
-        <img src="https://i.postimg.cc/PfLsMMXx/image.png"> <img src="https://i.postimg.cc/FsgPbfLz/image.png"> <img src="https://i.postimg.cc/wjMht35S/image.png">
+      <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/PfLsMMXx/image.png"></a> <a href="https://haleymacauley.github.io/javascript.html"><img src="https://i.postimg.cc/FsgPbfLz/image.png"> </a> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/wjMht35S/image.png"> </a>
         <p> This will be a collection of all my programs and other creations I have made during my time in CSC 106
     </body>
 </html>
