--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <body>
         <c><img src="https://i.postimg.cc/CLF51tCt/image.png"></c><br>
         <h1>Welcome to Haley MacAuley's Programming Portfolio</h1>
-      <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/PfLsMMXx/image.png"></a> <a href="https://haleymacauley.github.io/javascript.html"><img src="https://i.postimg.cc/FsgPbfLz/image.png"> </a> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/wjMht35S/image.png"> </a>
+        <tbody>
+            <tr>
+                <td> <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/gcVTgR4N/index.png"></a></td>
+                <td> <a href="https://haleymacauley.github.io/javascript.html"><img src="https://i.postimg.cc/SxqQwyfh/java.png"></a> </td>
+                <td> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/PxgNJ90z/Aboutme.png"></a></td>
+                <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png></a></td>
+            </tr>
+
+        </tbody>
+  
         <p> This will be a collection of all my programs and other creations I have made during my time in CSC 106
     </body>
 </html>
