--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Haley's Programming Portfolio</title>
     </head>
     <body>
-        <c><img src="https://i.postimg.cc/CLF51tCt/image.png"></c><br>
+        <c><img src="https://i.postimg.cc/ZKxNCYHf/haley.png"></c><br>
         <h1>Welcome to Haley MacAuley's Programming Portfolio</h1>
         <tbody>
             <tr>
