--- a/apps.html
+++ b/apps.html
@@ -1,1 +1,45 @@
-heehoo
+​
+2
+<!DOCTYPE html>
+3
+<html>
+4
+    <head>
+5
+        <meta charset="utf-8">
+6
+        <title>Haley's Programming Portfolio</title>
+7
+    </head>
+8
+    <body>
+9
+        <c><img src="https://i.postimg.cc/ZKxNCYHf/haley.png"></c><br>
+10
+        <h1>Welcome to Haley MacAuley's Programming Portfolio</h1>
+11
+        <tbody>
+12
+            <tr>
+13
+                <td> <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/gcVTgR4N/index.png"></a></td>
+14
+                <td> <a href="https://haleymacauley.github.io/javascript.html"><img src="https://i.postimg.cc/SxqQwyfh/java.png"></a> </td>
+15
+                <td> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/PxgNJ90z/Aboutme.png"></a></td>
+16
+                <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png></a></td>
+17
+            </tr>
+18
+​
+19
+        </tbody>
+20
+  
+21
+        <p> This will be a collection of all my programs and other creations I have made during my time in CSC 106
+22
+    </body>
+23
+</html>
