--- a/about.html
+++ b/about.html
@@ -5,10 +5,17 @@
         <title>Haley's Programming Portfolio</title>
     </head>
     <body>
-        <c><img src="https://i.postimg.cc/CLF51tCt/image.png"></c><br>
+        <c><img src="https://i.postimg.cc/ZKxNCYHf/haley.png"></c><br>
         <h1>Welcome to Haley MacAuley's Programming Portfolio</h1>
-        <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/PfLsMMXx/image.png"></a> <a href="https://haleymacauley.github.io/javascript.html"><img src="https://i.postimg.cc/FsgPbfLz/image.png"> </a> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/wjMht35S/image.png"> </a>
-        <p>My name is Haley MacAuley. <br> I was born and raised in Barre, Vermont.
+        <tbody>
+            <tr>
+                <td> <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/gcVTgR4N/index.png"></a></td>
+                <td> <a href="https://haleymacauley.github.io/javascript.html"><img src="https://i.postimg.cc/SxqQwyfh/java.png"></a> </td>
+                <td> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/PxgNJ90z/Aboutme.png"></a></td>
+                <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png></a></td>
+            </tr>
+        </tbody>
+<p>My name is Haley MacAuley. <br> I was born and raised in Barre, Vermont.
             <img href="">
     </body>
 </html>
