--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <td> <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/gcVTgR4N/index.png"></a></td>
                 <td> <a href="https://haleymacauley.github.io/javascript.html"><img src="https://i.postimg.cc/SxqQwyfh/java.png"></a> </td>
                 <td> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/PxgNJ90z/Aboutme.png"></a></td>
-                <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png></a></td>
+                <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png"></a></td>
             </tr>
 
         </tbody>
