--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
                 <td> <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/gcVTgR4N/index.png"></a></td>
                 <td> <a href="https://haleymacauley.github.io/javascript.html"><img src="https://i.postimg.cc/SxqQwyfh/java.png"></a> </td>
                 <td> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/PxgNJ90z/Aboutme.png"></a></td>
-                <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png></a></td>
+                <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png"></a></td>
             </tr>
         </tbody>
 <p>My name is Haley MacAuley. <br> I was born and raised in Barre, Vermont.
