--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <head>
         <meta charset="utf-8">
         <title>Haley's Programming Portfolio</title>
+        <style>
+            html {background-image: url(https://i.postimg.cc/XYgwBty3/mybackground.png);
+            }
+        </style>
     </head>
     <body>
         <c><img src="https://i.postimg.cc/ZKxNCYHf/haley.png"></c><br>
