--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <style>
             html {background-image: url(https://i.postimg.cc/W145KcvT/mybackground2.png);
             }
+            h1 {color:rgb(19,91,24);
         </style>
     </head>
     <body>
