--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </tr>
 
         </tbody>
-  
-        <p> This will be a collection of all my programs and other creations I have made during my time in CSC 106
+  <h3> 
+        <p> This will be a collection of the javascripts and apps I make during my time in CSC 106 at the <a href="https://www.uri.edu"University of Rhode Island</a>
     </body>
 </html>
