--- a/javascript.html
+++ b/javascript.html
@@ -1,8 +1,15 @@
+
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>Haley's Programming Portfolio</title>
+        <style>
+            html {background-image: url(https://i.postimg.cc/W145KcvT/mybackground2.png);
+            }
+            h1 {color:rgb(19,91,24);
+            }
+        </style>
     </head>
     <body>
         <c><img src="https://i.postimg.cc/ZKxNCYHf/haley.png"></c><br>
@@ -14,6 +21,7 @@
                 <td> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/PxgNJ90z/Aboutme.png"></a></td>
                 <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png"></a></td>
             </tr>
+
         </tbody>
     <p> My javascript programs:
     </body>
