--- a/about.html
+++ b/about.html
@@ -3,6 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Haley's Programming Portfolio</title>
+         <style>
+            html {background-image: url(https://i.postimg.cc/W145KcvT/mybackground2.png);
+            }
+            h1 {color:rgb(19,91,24);
+            }
+             #fam{float:left;
+                 color:rgb(30, 28, 66);
+             }
+             #interests{
+                 background-color:rgb(209, 190, 141);
+                 color:rgb(33, 16, 1);
+                 width:15%;
+        </style>
     </head>
     <body>
         <c><img src="https://i.postimg.cc/ZKxNCYHf/haley.png"></c><br>
@@ -15,7 +28,20 @@
                 <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png"></a></td>
             </tr>
         </tbody>
-<p>My name is Haley MacAuley. <br> I was born and raised in Barre, Vermont.
-            <img href="">
+<p>My name is Haley MacAuley. <br> I was born and raised in Barre, Vermont. <br> 
+   <p id="fam" My family consists of me, my older brother, my mother, and my father.<br>
+    We also have six pets, three cats and three axolotls.<br>
+    The cats are named Lucy, Blaze, and Mittens. The axolotls are named Big Boy, Torch, and Gumby.
+            <img src="https://i.postimg.cc/tgzq8r2d/image.png">
+                                                              
+           <p id="interests"> 
+             Some interests and hobbies I enjoy:
+            <ul>
+                <li>Drawing</li>
+                <li>Baking/Cooking</li>
+                <li>Video games</li>
+                <li>Mini-golf</li>
+                <li>D&D and other TTRPGs</li>
+            </ul>
     </body>
 </html>
