--- a/about.html
+++ b/about.html
@@ -31,7 +31,8 @@
 <p>My name is Haley MacAuley. <br> I was born and raised in Barre, Vermont. <br> 
    <p id="fam" My family consists of me, my older brother, my mother, and my father.<br>
     We also have six pets, three cats and three axolotls.<br>
-    The cats are named Lucy, Blaze, and Mittens. The axolotls are named Big Boy, Torch, and Gumby.
+    The cats are named Lucy, Blaze, and Mittens. The axolotls are named Big Boy, Torch, and Gumby.<br>
+    My family gets together every weekend in order to play the game <em>Phasmophobia</em>
             <img src="https://i.postimg.cc/tgzq8r2d/image.png">
                                                               
            <p id="interests"> 
