--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
                  background-color:rgb(209, 190, 141);
                  color:rgb(33, 16, 1);
                  width:15%;
+                 float:right;
         </style>
     </head>
     <body>
@@ -33,7 +34,7 @@
     We also have six pets, three cats and three axolotls.<br>
     The cats are named Lucy, Blaze, and Mittens. The axolotls are named Big Boy, Torch, and Gumby.<br>
     My family gets together every weekend in order to play the game <em>Phasmophobia</em>
-            <img src="https://i.postimg.cc/tgzq8r2d/image.png">
+            <img src="https://i.postimg.cc/tgzq8r2d/image.png" width=800>
                                                               
            <p id="interests"> 
              Some interests and hobbies I enjoy:
