--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                  background-color:rgb(209, 190, 141);
                  color:rgb(33, 16, 1);
                  width:15%;
-                 float:right;
+                 float:left;
         </style>
     </head>
     <body>
