--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <c><img src="https://i.postimg.cc/ZKxNCYHf/haley.png"></c><br>
-        <h1>Welcome to Haley MacAuley's Programming Portfolio</h1>
+        <h1><c>Welcome to Haley MacAuley's Programming Portfolio</c></h1>
         <tbody>
             <tr>
                 <td> <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/gcVTgR4N/index.png"></a></td>
