--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             }
             h1 {color:rgb(19,91,24);
             }
+            p {color:rgb(19,91,24);
+            }
         </style>
     </head>
     <body>
