--- a/about.html
+++ b/about.html
@@ -11,6 +11,10 @@
              #fam{float:left;
                  color:rgb(30, 28, 66);
              }
+             ul {color:rgb(33, 16, 1);
+                 width:15%;
+                     float:left;
+             }
              #interests{
                  background-color:rgb(209, 190, 141);
                  color:rgb(33, 16, 1);
