--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
                  color:rgb(30, 28, 66);
              }
              ul {color:rgb(33, 16, 1);
+                 background-color:rgb(209, 190, 141);
                  width:15%;
                      float:left;
              }
