--- a/apps.html
+++ b/apps.html
@@ -3,6 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Haley's Programming Portfolio</title>
+        <style>
+            html {background-image: url(https://i.postimg.cc/W145KcvT/mybackground2.png);
+            }
+            p {color:rgb(22,25,46:;
+                }
+        </style>
     </head>
     <body>
 
