--- a/apps.html
+++ b/apps.html
@@ -6,13 +6,14 @@
         <style>
             html {background-image: url(https://i.postimg.cc/W145KcvT/mybackground2.png);
             }
+            body {width:65%;}
             p {color:rgb(22,25,46:;
                 }
         </style>
     </head>
     <body>
 
-        <c><img src="https://i.postimg.cc/ZKxNCYHf/haley.png"></c><br>
+    <img src="https://i.postimg.cc/ZKxNCYHf/haley.png"><br>
         <h1>Welcome to Haley MacAuley's Programming Portfolio</h1>
         <tbody>
             <tr>
@@ -25,6 +26,6 @@
         </tbody>
         
         <p> This will be a collection of all my programs and other creations I have made during my time in CSC 106
-
+      
     </body>
 </html>
