--- a/javascript.html
+++ b/javascript.html
@@ -22,6 +22,7 @@
                 <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png"></a></td>
                 <h2><a href="https://www.khanacademy.org/computer-programming/racing-bitmoji/4534918404685824">racing bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/racing-bitmoji/4534918404685824/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
                 <h2><a href="https://www.khanacademy.org/computer-programming/danicng-bitmoji/4879220095893504">dancing bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/danicng-bitmoji/4879220095893504/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+                <h2><a href="https://www.khanacademy.org/computer-programming/macauley_zoo/5500402939772928">macauley_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/macauley_zoo/5500402939772928/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
             </tr>
 
         </tbody>
