--- a/final.html
+++ b/final.html
@@ -1,1 +1,31 @@
-<h2><a href="https://www.khanacademy.org/computer-programming/flappy-person/5275035337539584">"Flappy Person"</a></h2><script src="https://www.khanacademy.org/computer-programming/flappy-person/5275035337539584/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Haley's Programming Portfolio</title>
+        <style>
+            html {background-image: url(https://i.postimg.cc/W145KcvT/mybackground2.png);
+            }
+            body {width:65%;}
+            p {color:rgb(22,25,46:;
+                }
+        </style>
+    </head>
+    <body>
+
+    <img src="https://i.postimg.cc/ZKxNCYHf/haley.png"><br>
+        <h1>Welcome to Haley MacAuley's Programming Portfolio</h1>
+        <tbody>
+            <tr>
+                <td> <a href="https://haleymacauley.github.io/"><img src="https://i.postimg.cc/gcVTgR4N/index.png"></a></td>
+                <td> <a href="https://haleymacauley.github.io/javascript.html"><img src="https://i.postimg.cc/SxqQwyfh/java.png"></a> </td>
+                <td> <a href="https://haleymacauley.github.io/about.html"><img src="https://i.postimg.cc/PxgNJ90z/Aboutme.png"></a></td>
+                <td> <a href="https://haleymacauley.github.io/apps.html"><img src="https://i.postimg.cc/XqfS8Chy/apps.png"></a></td>
+            </tr>
+
+        </tbody>
+  <h2><a href="https://www.khanacademy.org/computer-programming/flappy-person/5275035337539584">"Flappy Person"</a></h2><script src="https://www.khanacademy.org/computer-programming/flappy-person/5275035337539584/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+  <p> This is the final project I worked on for CSC 106. It is a take on flappy bird that I made with Ryan Megna. Instead of a bird it utilizes both of our bitmojis as playable sprites. <br> The code uses an object class to define the pipes and uses an array that pushes in random numbers to determine the y value of the shapes. The game gradually speeds up over time by having the variable "pipeSpeed" added to the x positions, which is constantly being set equal to itself plus a small number. <br> The game has the choice between three different scenes as well as allowing the choice of bitmoji. The three scenes are "Default" "Sunset" and "Beach", which change the background and the pipe colors.
+      
+    </body>
+</html>
